# services-sessions

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.txt  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: session.py
nagare/services/: http_session.py
nagare/sessions/: __init__.py  common.py  exceptions.py  serializer.py
src/nagare/: session.py
src/nagare/services/: http_session.py
src/nagare/sessions/: __init__.py  common.py  exceptions.py  serializer.py
