[metadata]
name = nagare-services-sessions
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Sessions manager
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-sessions
    Tracker = https://github.com/nagareproject/services-sessions/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services
    nagare-server-http

[options.entry_points]
nagare.services =
    state = nagare.services.http_session:SessionService
    session = nagare.sessions.common:SessionsSelection

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
